<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:paddingTop="16sp"
    android:paddingBottom="16sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_your_bmi"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_height_placeholder"
            android:labelFor="@id/inputHeight" />
        <EditText
            android:id="@+id/inputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_weight_placeholder"
            android:labelFor="@id/inputWeight" />
        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/reset_button" />

        <LinearLayout
            android:id="@+id/resultComponent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/resultHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_message"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>